# FairHire

./: .gitignore  LICENSE  README.md  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
fairhire/: __init__.py  config.py  helpers.py
fairhire/agents/: __init__.py  data_bias.py  explainer.py  model_bias.py  reporter.py
fairhire/api/: __init__.py  main.py  routes.py
fairhire/core/: __init__.py  memory.py  orchestrator.py
fairhire/dashboard/: __init__.py  app.py
tests/: test_data_bias.py  test_model_bias.py  test_reporter.py
