[project]
name = "fairhire"
version = "0.1.0"
description = "AI Hiring Bias Detection - Multi-Agent Auditor"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
  "fastapi>=0.109",
  "uvicorn>=0.27",
  "aif360>=0.6",
  "fairlearn>=0.10",
  "lime>=0.2",
  "langgraph>=0.2",
  "redis>=5.0",
  "pandas>=2.0",
  "scikit-learn>=1.4",
  "numpy>=1.26",
  "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "httpx>=0.27"]
dashboard = ["streamlit>=1.30"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fairhire"]
